# translations

./: .gitignore  README.md  prompt.md
olafurw/: advice-to-new-programmers.md
twobithistory/: ada-lovelace-note-g.md  arpanet-protocols.md  arpanet.md  bbc-micro.md  bbs.md  birth-of-the-web.md  cat.md  chaosnet.md  codd-relational-model.md  cvs.md  dawn-of-the-microcomputer.md  differential-analyzer.md  doom-bsp.md  foaf.md  ibm-029-card-punch.md  learning-basic.md  lisp.md  readline.md  rest.md  rss.md  semantic-web.md  simula.md  simulating-the-altair.md  the-lineage-of-man.md  the-most-important-database.md  the-rise-and-demise-of-rss.md  the-rise-and-rise-of-json.md  the-ruby-story.md  where-vim-came-from.md
twobithistory/code/: .env.example  download_original.py  prompt.md  pyproject.toml  translate.py
twobithistory/original/: ada-lovelace-note-g.md  arpanet-protocols.md  arpanet.md  bbc-micro.md  bbs.md  birth-of-the-web.md  cat.md  chaosnet.md  codd-relational-model.md  cvs.md  dawn-of-the-microcomputer.md  differential-analyzer.md  doom-bsp.md  foaf.md  ibm-029-card-punch.md  learning-basic.md  lisp.md  main.py  pyproject.toml  readline.md  rest.md  rss.md  semantic-web.md  simula.md  simulating-the-altair.md  the-lineage-of-man.md  the-most-important-database.md  the-rise-and-rise-of-json.md  the-ruby-story.md  timeline.md  where-vim-came-from.md
twobithistory/original/markdown/: ada-lovelace-note-g.md  arpanet-protocols.md  arpanet.md  bbc-micro.md  bbs.md  birth-of-the-web.md  cat.md  chaosnet.md  codd-relational-model.md  cvs.md  doom-bsp.md  foaf.md  (+16 more)
