[project]
name = "original"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html-to-markdown>=1.4.0",
    "llama-index",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-llms-google-genai>=0.2.3",
    "lxml>=6.0.0",
    "requests>=2.32.4",
]

[[tool.uv.index]]
url = "https://mirrors.tencent.com/pypi/simple/"
default = true
